# hermes-amazon

./: AGENTS.md  HEARTBEAT.md  MEMORY.md  MODEL.md  README.md  SOUL.md  USER.md  VERSION.md  pyproject.toml
hermes_amazon/: __init__.py  bootstrap.py  cli.py  config.py  contracts.py  credentials.py  messaging.py  monitoring.py  plan.py  processing.py  products.py
tests/: test_bootstrap.py  test_config.py  test_credentials.py  test_messaging.py  test_monitoring.py  test_plan.py  test_processing.py  test_products.py
