[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-amazon"
version = "0.1.0"
description = "Base operacional do Hermes integrado ao ecossistema Amazon"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Wii Ops Center" }]

[project.scripts]
hermes-amazon = "hermes_amazon.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["hermes_amazon*"]
